--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
-sudo: false
+matrix:
+  - os: linux
+    sudo: required
+    dist: trust
+  - os: linux
+    sudo: false
+    dist: precise
 language: python
 addons:
   apt:
