--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 matrix:
-  - os: linux
-    sudo: required
-    dist: trust
-  - os: linux
-    sudo: false
-    dist: precise
+  include:
+    - os: linux
+      sudo: required
+      dist: trust
+    - os: linux
+      sudo: false
+      dist: precise
 language: python
 addons:
   apt:
