--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,10 @@ matrix:
       dist: trusty
       python: "2.7"
     - os: linux
-      sudo: false
+      sudo: required
       dist: precise
       python: "2.7"
 language: python
-addons:
-  apt:
-    packages:
-    - gcc-multilib
-    - gcc-arm-linux-gnueabihf
 cache:
     - pip
     - directories:
